--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -1,18 +1,85 @@
-.nav-ul {
-  margin: 0;
-  padding: 10px;
-  width: 500px;
-  background-color: #6d7f8f;
+.topnav {
+  overflow: hidden;
+  background-color: #e9e9e9;
 }
 
-.nav-li {
-  display: inline;
+.footnav {
+  overflow: hidden;
+  background-color: #e9e9e9;
+  padding: 14px;
+  text-align: center;
 }
 
-.nav-a {
-  color: #fff;
+.topnav a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  margin-left: 2px;
   text-decoration: none;
-  font-weight: bold;
-  display: inline-block;
-  width: 100px;
+  font-size: 17px;
+  background-color: rgb(56, 61, 68);
+}
+
+.topnav a:hover {
+  background-color: rgb(81, 118, 134);
+  color: white;
+}
+
+.topnav input[type=text] {
+  float: right;
+  padding: 6px;
+  margin-top: 8px;
+  margin-left: 3px;
+  font-size: 17px;
+  border: none;
+  width: 120px;
+  box-shadow: 0px 3px 0px 0px rgb(56 61 68 / 20%);
+  background-color: rgb(233, 235, 235)
+}
+
+.topnav label {
+  float: right;
+  padding: 6px;
+  margin-top: 8px;
+  margin-left: 3px;
+  font-size: 17px;
+  border: none;
+  box-shadow: 0px 3px 0px 0px rgb(56 61 68 / 20%);
+  background-color: rgb(233, 235, 235)
+}
+
+.topnav .login-container .button {
+  float: right;
+  padding: 14px 24px;
+  margin-top: 0px;
+  margin-left: 8px;
+  margin-right: 16px;
+  background-color: #555;
+  color: white;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
+
+.topnav .login-container button:hover {
+  background-color: rgb(81, 118, 134);
+}
+
+@media screen and (max-width: 600px) {
+  .topnav .login-container {
+    float: none;
+  }
+
+  .topnav a,
+  .topnav input[type=text],
+  .topnav .login-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
 }
