--- a/frontend/src/components/Table.css
+++ b/frontend/src/components/Table.css
@@ -1,8 +1,7 @@
 .cadre {
   margin: 0;
   padding: 40px 10px;
-  width: 500px;
-  background: #f4fafc;
+  background: #f4f4f4;
 }
 
 .cadre-tbl {
@@ -12,5 +11,5 @@
 .cadre-td,
 .cadre-th {
   padding: 5px;
-  background: #e4edf6;
+  background: #e9e9e9;
 }
